--- a/styles/main.css
+++ b/styles/main.css
@@ -48,9 +48,17 @@ body {
   .column.fourth {width: 25%;}
   .column.flow-opposite {float: right;}
 
-
-
   /* large screens (1024px) */
   @media (min-width: 1024px) {
     html { font-size: 120%; }
   }
+
+  .clearfix::before,
+  .clearfix::after {
+      content: " ";
+      display: table;
+  }
+
+  .clearfix::after {
+      clear: both;
+    }
